--- a/config/services.yaml
+++ b/config/services.yaml
@@ -59,5 +59,10 @@ services:
         resource: '../src/Command/*'
         tags: [ 'console.command' ]
 
-
-
+    #
+    # EVENT LISTENER
+    #
+    App\EventListener\PimcoreAdminListener:
+        tags:
+            - { name: kernel.event_listener, event: pimcore.bundle_manager.paths.css, method: addCSSFiles }
+            - { name: kernel.event_listener, event: pimcore.bundle_manager.paths.js, method: addJSFiles }
