--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,6 +3,8 @@ imports:
 
 
 pimcore:
+    chromium:
+        uri: 'ws://chrome:3000/'
 
 # IMPORTANT Notice!
 # Following there are only some examples listed, for a full list of possible options, please run the following command:
